# ocaml_c_lexer

./: README.md  dune-project
examples/: hello_world.c
lib/: cli.ml  dune  lexer.ml
test/: dune  test_ocaml_c_lexer.ml
